--- a/index.html
+++ b/index.html
@@ -6,25 +6,33 @@
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
+          <li><a href="mailto:info@devstudio.com">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="info@devstudio.com"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+110001111111"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -111,7 +119,7 @@
       </section>
     </main>
     <footer>
-      <p>WebStudio</p>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
