--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="mailto:info@devstudio.com">Studio</a></li>
+          <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
@@ -16,8 +16,7 @@
       <address>
         <ul>
           <li>
-            <a
-              href="info@devstudio.com"
+            <a href="mailto:info@devstudio.com"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >info@devstudio.com</a
