--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com"
+            <a
+              href="mailto:info@devstudio.com"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >info@devstudio.com</a
