--- a/index.html
+++ b/index.html
@@ -2,20 +2,31 @@
 <html lang="en">
   <head>
     <title>Lesson1</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="nav-logo" href="./index.html"><span>Web</span>Studio</a>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="">Studio</a></li>
+          <li class="nav-item"><a href="">Portfolio</a></li>
+          <li class="nav-item"><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
-          <li>
+          <li class="contact-list">
             <a
               href="mailto:info@devstudio.com"
               target="_blank"
@@ -23,7 +34,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contact-list">
             <a
               href="tel:+110001111111"
               target="_blank"
@@ -34,93 +45,174 @@
         </ul>
       </address>
     </header>
-    <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+    <main class="main">
+      <section class="main-sect">
+        <h1 class="main-text">Effective Solutions for Your Business</h1>
+        <button class="main-button" type="button">Order Service</button>
       </section>
-      <section>
-        <h2 hidden>Headline</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="headline">
+        <h2 class="visually-hidden">Headline</h2>
+        <ul class="headline-list">
+          <li class="headline-item">
+            <h3 class="headline-subtitle">Strategy</h3>
+            <p class="headline-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="headline-item">
+            <h3 class="headline-subtitle">Punctuality</h3>
+            <p class="headline-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="headline-item">
+            <h3 class="headline-subtitle">Diligence</h3>
+            <p class="headline-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="headline-subtitle">Technologies</h3>
+            <p class="headline-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="ourteam-main">
+        <h2 class="ourteam">Our Team</h2>
+        <ul class="ourteam-list">
+          <li class="ourteam-item">
             <img
+              class="ourteam-img"
               src="./images/img1min.jpg"
               alt="Mark"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="ourteam-subtitle">Mark Guerrero</h3>
+            <p class="ourteam-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="ourteam-item">
             <img
+              class="ourteam-img"
               src="./images/img2min.jpg"
               alt="Tom"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="ourteam-subtitle">Tom Ford</h3>
+            <p class="ourteam-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="ourteam-item">
             <img
+              class="ourteam-img"
               src="./images/img3min.jpg"
               alt="Camila"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="ourteam-subtitle">Camila Garcia</h3>
+            <p class="ourteam-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="ourteam-item">
             <img
+              class="ourteam-img"
               src="./images/img4min.jpg"
               alt="Daniel"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="ourteam-subtitle">Daniel Wilson</h3>
+            <p class="ourteam-item-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="ourportfolio">
+        <h2 class="ourportfolio-title">Our Portfolio</h2>
+        <ul class="ourportfolio-list">
+          <li class="ourportfolio-item">
+            <a href="">
+              <img
+                class="ourportfolio-img"
+                src="./images/img5.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="ourportfolio-subtitle">Banking App</h3>
+            <p class="ourportfolio-item-text">App</p>
+          </li>
+          <li class="ourportfolio-item">
+            <a href="">
+              <img
+                class="ourportfolio-img"
+                src="./images/img6.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="ourportfolio-subtitle">Cashless Payment</h3>
+            <p class="ourportfolio-item-text">Marketing</p>
+          </li>
+          <li class="ourportfolio-item">
+            <a href="">
+              <img
+                class="ourportfolio-img"
+                src="./images/img7.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="ourportfolio-subtitle">Meditation App</h3>
+            <p class="ourportfolio-item-text">App</p>
+          </li>
+          <li class="ourportfolio-item">
+            <a href="">
+              <img
+                class="ourportfolio-img"
+                src="./images/img8.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="ourportfolio-subtitle">Taxi Service</h3>
+            <p class="ourportfolio-item-text">Marketing</p>
+          </li>
+          <li class="ourportfolio-item">
+            <a href="">
+              <img
+                class="ourportfolio-img"
+                src="./images/img9.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="ourportfolio-subtitle">Screen Illustrations</h3>
+            <p class="ourportfolio-item-text">Design</p>
+          </li>
+          <li class="ourportfolio-item">
+            <a href="">
+              <img
+                class="ourportfolio-img"
+                src="./images/img10.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="ourportfolio-subtitle">Online Courses</h3>
+            <p class="ourportfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+      <p class="Footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
