--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="nav">
         <a class="nav-logo" href="./index.html"><span>Web</span>Studio</a>
         <ul class="nav-list">
-          <li class="nav-item"><a href="">Studio</a></li>
-          <li class="nav-item"><a href="">Portfolio</a></li>
-          <li class="nav-item"><a href="">Contacts</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul>
-          <li class="contact-list">
-            <a
+        <ul class="contact-list">
+          <li class="contact-item">
+            <a class="contact-link"
               href="mailto:info@devstudio.com"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-list">
-            <a
+          <li class="contact-item">
+            <a class="contact-link"
               href="tel:+110001111111"
               target="_blank"
               rel="noopener noreferrer nofollow"
