--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
         <h2 class="ourportfolio-title">Our Portfolio</h2>
         <ul class="ourportfolio-list">
           <li class="ourportfolio-item">
-            <a class="ourportfolio-img-link"  href="">
               <img
                 class="ourportfolio-img"
                 src="./images/img5.jpg"
@@ -145,10 +144,9 @@
                 height="300"
             />
             <h3 class="ourportfolio-subtitle">Banking App</h3>
-            <p class="ourportfolio-item-text">App</p></a>
+            <p class="ourportfolio-item-text">App</p>
           </li>
           <li class="ourportfolio-item">
-            <a class="ourportfolio-img-link"  href="">
               <img
                 class="ourportfolio-img"
                 src="./images/img6.jpg"
@@ -157,10 +155,9 @@
                 height="300"
             />
             <h3 class="ourportfolio-subtitle">Cashless Payment</h3>
-            <p class="ourportfolio-item-text">Marketing</p></a>
+            <p class="ourportfolio-item-text">Marketing</p>
           </li>
           <li class="ourportfolio-item">
-            <a class="ourportfolio-img-link"href="">
               <img
                 class="ourportfolio-img"
                 src="./images/img7.jpg"
@@ -169,10 +166,9 @@
                 height="300"
             />
             <h3 class="ourportfolio-subtitle">Meditation App</h3>
-            <p class="ourportfolio-item-text">App</p></a>
+            <p class="ourportfolio-item-text">App</p>
           </li>
           <li class="ourportfolio-item">
-            <a class="ourportfolio-img-link" href="">
               <img
                 class="ourportfolio-img"
                 src="./images/img8.jpg"
@@ -181,10 +177,9 @@
                 height="300"
             />
             <h3 class="ourportfolio-subtitle">Taxi Service</h3>
-            <p class="ourportfolio-item-text">Marketing</p></a>
+            <p class="ourportfolio-item-text">Marketing</p>
           </li>
           <li class="ourportfolio-item">
-            <a class="ourportfolio-img-link" href="">
               <img
                 class="ourportfolio-img"
                 src="./images/img9.jpg"
@@ -193,10 +188,9 @@
                 height="300"
             />
             <h3 class="ourportfolio-subtitle">Screen Illustrations</h3>
-            <p class="ourportfolio-item-text">Design</p></a>
+            <p class="ourportfolio-item-text">Design</p>
           </li>
           <li class="ourportfolio-item">
-            <a class="ourportfolio-img-link" href="">
               <img
                 class="ourportfolio-img"
                 src="./images/img10.jpg"
@@ -205,7 +199,7 @@
                 height="300"
             />
             <h3 class="ourportfolio-subtitle">Online Courses</h3>
-            <p class="ourportfolio-item-text">Marketing</p></a>
+            <p class="ourportfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
