--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <address class="address">
         <ul class="contact-list">
           <li class="contact-item">
-            <a class="contact-link"
+            <a
+              class="contact-link"
               href="mailto:info@devstudio.com"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -35,7 +36,8 @@
             >
           </li>
           <li class="contact-item">
-            <a class="contact-link"
+            <a
+              class="contact-link"
               href="tel:+110001111111"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -51,7 +53,7 @@
         <button class="main-button" type="button">Order Service</button>
       </section>
       <section class="headline">
-        <h2 class="visually-hidden">Headline</h2>
+        <h2 hidden>Headline</h2>
         <ul class="headline-list">
           <li class="headline-item">
             <h3 class="headline-subtitle">Strategy</h3>
@@ -136,67 +138,67 @@
         <h2 class="ourportfolio-title">Our Portfolio</h2>
         <ul class="ourportfolio-list">
           <li class="ourportfolio-item">
-              <img
-                class="ourportfolio-img"
-                src="./images/img5.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
+            <img
+              class="ourportfolio-img"
+              src="./images/img5.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
             />
             <h3 class="ourportfolio-subtitle">Banking App</h3>
             <p class="ourportfolio-item-text">App</p>
           </li>
           <li class="ourportfolio-item">
-              <img
-                class="ourportfolio-img"
-                src="./images/img6.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
+            <img
+              class="ourportfolio-img"
+              src="./images/img6.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
             />
             <h3 class="ourportfolio-subtitle">Cashless Payment</h3>
             <p class="ourportfolio-item-text">Marketing</p>
           </li>
           <li class="ourportfolio-item">
-              <img
-                class="ourportfolio-img"
-                src="./images/img7.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
+            <img
+              class="ourportfolio-img"
+              src="./images/img7.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
             />
             <h3 class="ourportfolio-subtitle">Meditation App</h3>
             <p class="ourportfolio-item-text">App</p>
           </li>
           <li class="ourportfolio-item">
-              <img
-                class="ourportfolio-img"
-                src="./images/img8.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
+            <img
+              class="ourportfolio-img"
+              src="./images/img8.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
             />
             <h3 class="ourportfolio-subtitle">Taxi Service</h3>
             <p class="ourportfolio-item-text">Marketing</p>
           </li>
           <li class="ourportfolio-item">
-              <img
-                class="ourportfolio-img"
-                src="./images/img9.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
+            <img
+              class="ourportfolio-img"
+              src="./images/img9.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
             />
             <h3 class="ourportfolio-subtitle">Screen Illustrations</h3>
             <p class="ourportfolio-item-text">Design</p>
           </li>
           <li class="ourportfolio-item">
-              <img
-                class="ourportfolio-img"
-                src="./images/img10.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
+            <img
+              class="ourportfolio-img"
+              src="./images/img10.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
             />
             <h3 class="ourportfolio-subtitle">Online Courses</h3>
             <p class="ourportfolio-item-text">Marketing</p>
