--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="body">
     <header class="header">
       <nav class="nav">
-        <a class="nav-logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="nav-logo" href="./index.html">Web<span>Studio</span></a>
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
           <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
