--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-      <p class="Footer-text">
+      <a class="footer-logo" href="./index.html">Web<span>Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
