--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="nav">
         <a class="nav-logo" href="./index.html">Web<span>Studio</span></a>
         <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
           <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
           <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
         </ul>
