--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html">Web<span>Studio</span></a>
+      <a class="footer-logo" href="./index.html">Web<span class="foo-logo">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
