--- a/index.html
+++ b/index.html
@@ -16,40 +16,47 @@
   </head>
   <body class="body">
     <header class="header">
-      <nav class="nav">
-        <a class="nav-logo" href="./index.html">Web<span>Studio</span></a>
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="contact-list">
-          <li class="contact-item">
-            <a
-              class="contact-link"
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact-item">
-            <a
-              class="contact-link"
-              href="tel:+110001111111"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="cont header-cont">
+        <nav class="nav">
+          <a class="nav-logo" href="./index.html">Web<span>Studio</span></a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="contact-list">
+            <li class="contact-item">
+              <a
+                class="contact-link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-item">
+              <a
+                class="contact-link"
+                href="tel:+110001111111"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main class="main">
       <section class="main-sect">
+        <div class="cont">
+        <div class="main-text-cont">
         <h1 class="main-text">Effective Solutions for Your Business</h1>
+        </div>
         <button class="main-button" type="button">Order Service</button>
       </section>
       <section class="headline">
@@ -84,8 +91,10 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="ourteam-main">
+        <div class="cont">
         <h2 class="ourteam">Our Team</h2>
         <ul class="ourteam-list">
           <li class="ourteam-item">
@@ -133,8 +142,10 @@
             <p class="ourteam-item-text">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="ourportfolio">
+        <div class="cont">
         <h2 class="ourportfolio-title">Our Portfolio</h2>
         <ul class="ourportfolio-list">
           <li class="ourportfolio-item">
@@ -204,14 +215,19 @@
             <p class="ourportfolio-item-text">Marketing</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html">Web<span class="foo-logo">Studio</span></a>
+     <div class="cont">
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="foo-logo">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
