--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 href="mailto:info@devstudio.com"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                >info@devstudio.com</a
+                >info@.com</a
               >
             </li>
             <li class="contact-item">
@@ -54,12 +54,14 @@
     <main class="main">
       <section class="main-sect">
         <div class="cont">
-        <div class="main-text-cont">
-        <h1 class="main-text">Effective Solutions for Your Business</h1>
+          <div class="main-text-cont">
+            <h1 class="main-text">Effective Solutions for Your Business</h1>
+            <button class="main-button" type="button">Order Service</button>
+          </div>
         </div>
-        <button class="main-button" type="button">Order Service</button>
       </section>
       <section class="headline">
+        <div class="cont headline-cont">
         <h2 hidden>Headline</h2>
         <ul class="headline-list">
           <li class="headline-item">
@@ -94,7 +96,7 @@
       </div>
       </section>
       <section class="ourteam-main">
-        <div class="cont">
+        <div class="cont ourteam-cont">
         <h2 class="ourteam">Our Team</h2>
         <ul class="ourteam-list">
           <li class="ourteam-item">
@@ -111,7 +113,7 @@
           <li class="ourteam-item">
             <img
               class="ourteam-img"
-              src="./images/img2min.jpg"
+              src="./images/img3min.jpg"
               alt="Tom"
               width="264"
               height="260"
@@ -122,7 +124,7 @@
           <li class="ourteam-item">
             <img
               class="ourteam-img"
-              src="./images/img3min.jpg"
+              src="./images/img2min.jpg"
               alt="Camila"
               width="264"
               height="260"
@@ -145,7 +147,7 @@
       </div>
       </section>
       <section class="ourportfolio">
-        <div class="cont">
+        <div class="cont ourportfolio-cont">
         <h2 class="ourportfolio-title">Our Portfolio</h2>
         <ul class="ourportfolio-list">
           <li class="ourportfolio-item">
@@ -156,8 +158,10 @@
               width="360"
               height="300"
             />
+            <div class="ourportfolio-cont-two">
             <h3 class="ourportfolio-subtitle">Banking App</h3>
             <p class="ourportfolio-item-text">App</p>
+          </div>
           </li>
           <li class="ourportfolio-item">
             <img
@@ -167,8 +171,10 @@
               width="360"
               height="300"
             />
+            <div class="ourportfolio-cont-two">
             <h3 class="ourportfolio-subtitle">Cashless Payment</h3>
             <p class="ourportfolio-item-text">Marketing</p>
+          </div>
           </li>
           <li class="ourportfolio-item">
             <img
@@ -178,8 +184,10 @@
               width="360"
               height="300"
             />
+            <div class="ourportfolio-cont-two">
             <h3 class="ourportfolio-subtitle">Meditation App</h3>
             <p class="ourportfolio-item-text">App</p>
+          </div>
           </li>
           <li class="ourportfolio-item">
             <img
@@ -189,8 +197,10 @@
               width="360"
               height="300"
             />
+            <div class="ourportfolio-cont-two">
             <h3 class="ourportfolio-subtitle">Taxi Service</h3>
             <p class="ourportfolio-item-text">Marketing</p>
+          </div>
           </li>
           <li class="ourportfolio-item">
             <img
@@ -200,8 +210,10 @@
               width="360"
               height="300"
             />
+            <div class="ourportfolio-cont-two">
             <h3 class="ourportfolio-subtitle">Screen Illustrations</h3>
             <p class="ourportfolio-item-text">Design</p>
+          </div>
           </li>
           <li class="ourportfolio-item">
             <img
@@ -211,15 +223,17 @@
               width="360"
               height="300"
             />
+            <div class="ourportfolio-cont-two">
             <h3 class="ourportfolio-subtitle">Online Courses</h3>
             <p class="ourportfolio-item-text">Marketing</p>
+          </div>
           </li>
         </ul>
       </div>
       </section>
     </main>
     <footer class="footer">
-     <div class="cont">
+     <div class="cont cont-footer">
       <a class="footer-logo" href="./index.html"
         >Web<span class="foo-logo">Studio</span></a
       >
